--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -4,12 +4,6 @@ block_1:
   color_overlay: 'rgba(50, 50, 50, 0.5)'
   title: 'ROBUST SOLUTIONS FOR YOUR LOCALIZATION NEEDS'
   text: 'Get your translation by top-rated native translators'
-  button_1:
-    name: 'Get Instant Quote'
-    link: '#'
-  button_2: 
-    name: 'Place Order'
-    link: '#'
 
 block_2:
   visible: true
@@ -72,7 +66,7 @@ block_5:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   title: 'How we work'
-  text: 'We have devised the simplest and seamless mechanism for you to place translation order. Getting your global success is just a matter of 1, 2 and 3 – simple!'
+  text: 'We have devised the simplest and seamless mechanism for you to place translation order. <br/>Getting your global success is just a matter of 1, 2 and 3 – simple!'
   items:
     - index: '1'
       title: 'Rates'
