--- a/admin/config.yml
+++ b/admin/config.yml
@@ -53,12 +53,14 @@ collections:
           label: 'Button 1'
           widget: 'object'
           fields:
+          - {name: 'visible', label: 'Visible', widget: 'boolean'}
           - {name: 'name', label: 'Name', widget: 'string', required: 'false'}
           - {name: 'link', label: 'Link', widget: 'string', required: 'false'}
         - name: 'button_2'
           label: 'Button_2'
           widget: 'object'
           fields:
+          - {name: 'visible', label: 'Visible', widget: 'boolean'}
           - {name: 'name', label: 'Name', widget: 'string', required: 'false'}
           - {name: 'link', label: 'Link', widget: 'string', required: 'false'}
     
@@ -96,18 +98,6 @@ collections:
         - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
         - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
         - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
-        - name: 'button_1'
-          label: 'Button 1'
-          widget: 'object'
-          fields:
-          - {name: 'name', label: 'Name', widget: 'string', required: 'false'}
-          - {name: 'link', label: 'Link', widget: 'string', required: 'false'}
-        - name: 'button_2'
-          label: 'Button_2'
-          widget: 'object'
-          fields:
-          - {name: 'name', label: 'Name', widget: 'string', required: 'false'}
-          - {name: 'link', label: 'Link', widget: 'string', required: 'false'}
       - name: 'block_2'
         label: 'Block 2'
         widget: 'object'
@@ -250,10 +240,207 @@ collections:
           - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
           - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
         
-    # - name: 'services_page_information'
-    #   label: 'Services Page Information'
-    #   file: '_data/pages/services.yml'
+    - name: 'about_page_information'
+      label: 'About Page Information'
+      file: '_data/pages/about.yml'
+      fields:
+      - name: 'block_1'
+        label: 'Block 1'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+        - name: 'button'
+          label: 'Button'
+          widget: 'object'
+          fields:
+          - {name: 'name', label: 'Name', widget: 'string', required: 'false'}
+          - {name: 'link', label: 'Link', widget: 'string', required: 'false'}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'id', label: 'Id', widget: 'string', required: 'false'}
+          - {name: 'name', label: 'Name', widget: 'string', required: 'false'}
+      - name: 'block_2'
+        label: 'Block 2'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_3'
+        label: 'Block 3'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'icon', label: 'Icon', widget: 'string', required: 'false'}
+          - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+          - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_4'
+        label: 'Block 4'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'icon', label: 'Icon', widget: 'string', required: 'false'}
+          - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+          - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_5'
+        label: 'Block 5'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'icon', label: 'Icon', widget: 'string', required: 'false'}
+          - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+          - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_6'
+        label: 'Block 6'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'icon', label: 'Icon', widget: 'string', required: 'false'}
+          - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+          - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_7'
+        label: 'Block 7'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_8'
+        label: 'Block 8'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_9'
+        label: 'Block 9'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'icon', label: 'Icon', widget: 'string', required: 'false'}
+          - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+          - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
     
-    # - name: 'about_page_information'
-    #   label: 'About Page Information'
-    #   file: '_data/pages/about.yml'
+    - name: 'legal_page_information'
+      label: 'Legal Page Information'
+      file: '_data/pages/legal.yml'
+      fields:
+      - name: 'block_1'
+        label: 'Block 1'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_2'
+        label: 'Block 2'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'icon', label: 'Icon', widget: 'string', required: 'false'}
+          - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+          - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_3'
+        label: 'Block 3'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'icon', label: 'Icon', widget: 'string', required: 'false'}
+          - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+          - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_4'
+        label: 'Block 4'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+      - name: 'block_5'
+        label: 'Block 5'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+      - name: 'block_6'
+        label: 'Block 6'
+        widget: 'object'
+        fields:
+        - {name: 'visible', label: 'Visible', widget: 'boolean'}
+        - {name: 'background_image', label: 'Background Image', widget: 'image', required: 'false'}
+        - {name: 'color_overlay', label: 'Color Overlay', widget: 'string', required: 'false'}
+        - {name: 'title', label: 'Title', widget: 'string', required: 'false'}
+        - {name: 'text', label: 'Text', widget: 'markdown', required: 'false'}
+
+    
