fix some stupid error

--- a/_data/customer_reviews.yml
+++ b/_data/customer_reviews.yml
@@ -15,3 +15,7 @@ customers:
   name: 'Peter'
   company: 'New York University'
   review: 'Goodbye World !!'
+- avatar: '/assets/images/upload/avatar.jpg'
+  name: 'Peter'
+  company: 'New York University'
+  review: 'Hell Yeahhhh !!'
