--- a/_data/header.yml
+++ b/_data/header.yml
@@ -11,7 +11,7 @@ extra_nav:
     link: '#' 
 
 primary_nav:
-  logo: /img/transparent_logo.png
+  logo: /assets/images/ui/transparent_logo.png
   items:
   - title: 'About'
     link: '/pages/about'
