--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Jekyll • Simple, blog-aware, static sites
 description: Transform your plain text into static websites and blogs
 # url: https://jekyllrb.com
 # repository: https://github.com/jekyll/jekyll
-timezone: America/Los_Angeles
+timezone: Asia/Ho_Chi_Minh
 logo: "/img/transperant_logo.png"
 google_analytics_id: "UA-143724740-1"
 google_site_verification: onQcXpAvtHBrUI5LlroHNE_FP0b2qvFyPq7VZw36iEY
