--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,10 @@ collections:
 paginate: 5
 paginate_path: "/blog/page:num/"
 
+algolia:
+  application_id: UO7IH9HF5X
+  index_name:     jndctranslation
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
