Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -2,7 +2,7 @@ block_1:
   background_image: /assets/images/upload/landmark-81-banner-1920x800px.jpg
   color_overlay: 'rgba(50, 50, 50, 0.6)'
   text: Get your translation by the top-rated Vietnamese native speaker
-  title: DEVELOPING YOUT BUSINESS IN GLOBAL MARKET WITH JNDC TRANSLATION
+  title: Developing your business in Global Market with JNDC - Translation
   visible: true
 block_2:
   background_image: ''
