Update Website Pages “about_page_information”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -19,14 +19,13 @@ block_2:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   text: >-
-    Mars Translation is an international leader in the translation marketplace
-    that offers a transparent, intuitive and cost-effective online portal to
-    customers who need documents, web content, and video content translated
-    guaranteeing high-quality and speed. Unlike other options currently
-    available in the market (translation companies, online translation agencies,
-    etc.), Marstranslation.com connects its customers with highly rated,
-    certified, native translators from around the world who deliver quality
-    translations according to company standards.
+    JNDC - Translation is a Vietnamese Languages Company. We is a leading in
+    providing translation services in the translation marketplace that offers a
+    transparent, intuitive and cost-effective online portal to customers who
+    need documents, web content and video content translated guaranteeing
+    high-quality and high speed. JNDC - Translation connects its customers with
+    highly rated, certified, Vietnamese native translators who can deliver
+    quality translation and follow our company strict standards.
   visible: true
 block_3:
   background_image: ''
