Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -193,7 +193,7 @@ block_10:
         market, we ensure that cultural sensitivity is not compromised in the
         translation. We believe that these factors play a major role in creating
         a positive for our clients.
-      title: Why Choose Mars
+      title: Why Choose JNDC - Translation?
     - text: >-
         ### Professional and Reliable
 
