Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -83,10 +83,10 @@ block_5:
     - text: Rate our translation services to get even better quality next time.
       title: Speed
   text: >-
-    We have devised the simplest and seamless mechanism for you to place
-    translation order. <br/>Getting your global success is just a matter of 1, 2
-    and 3 – simple!
-  title: How we work
+    We have translators with specific domain expertise, skills, background, and
+    understanding so your <br/>projects are handled by the most relevant
+    linguists.
+  title: OUR TRANSLATION INDUSTRIES
   visible: true
 block_6:
   background_image: ''
